--- a/Week2-1/package.json
+++ b/Week2-1/package.json
@@ -1,6 +1,7 @@
 {
   "name": "hardhat-project",
   "dependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.5",
     "hardhat": "^2.13.0"
   }
